--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "7.6.5",
     "@nestjs/core": "7.5.1",
     "@nestjs/platform-express": "7.5.1",
+    "lorem-ipsum": "2.0.3",
+    "nanoid": "3.1.20",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "6.6.3"
