--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:12
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN npm run build
 EXPOSE 3000
 CMD [ "npm", "run", "start:prod" ]
